0025588: fix inconsistency in 2d coordinates equality check